Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3051

Reject can fail to restore message credit

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.9
    • C++ Broker
    • None

    Description

      In window mode, if messages are rejected before they are completed, the corresponding credit is not re-issued. I.e. the credit window is not correctly moved forward. A receiver with non-zero capacity that rejects message may therefore find that it gets no more messages delivered even when there are some available.

      Attachments

        Activity

          People

            gsim Gordon Sim
            jonathan.robie Jonathan Robie
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: