QPID-3051: Ensure credit window is moved correctly even if it contains rejected messages.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1073085 13f79535-47bb-0310-9956-ffa450edef68